--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!-- TO DO -->
+
+<!-- blend the jellfish titles from light to dark -->
+<!-- adjust the dna icon -->
+<!-- check all alt descriptions -->
+
+<!-- BONUS: make the hamburger menu no so shitty? -->
+
+
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,6 +24,9 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="app.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
     <!-- pictures are from unsplash -->
     <title>Jellyfish</title>
@@ -67,8 +81,6 @@
               <h1>JELLYFISH</h1>           
               <h1>JELLYFISH</h1>           
               <h1>JELLYFISH</h1>           
-              <h1>JELLYFISH</h1>           
-              <h1>JELLYFISH</h1>           
           </div>
         </div>
         <div class="col-lg-6 px-0">
@@ -96,7 +108,7 @@
             <!-- it just looks nicer this way -->
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
               <h2>JELLYFISH</h2>
-              <img class="d-none d-lg-inline" src="imgs/" alt="lollipop icon">
+              <i class="fas fa-dna"></i>
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt in voluptatibus aspernatur architecto excepturi delectus soluta? Ipsa, deleniti dolorem hic consequatur repellat eveniet quidem voluptate necessitatibus dolorum delectus minus vitae, ut, veritatis sint ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis, quidem assumenda.</p>
             </div>
           </div>
